# zozo_dev_camp2024

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
conf/: config.yaml
logs/main/.hydra/: config.yaml  hydra.yaml
utils/: __init__.py  dataclass.py  plot.py  policylearners.py
